# Headlines

./: .gitignore  CLAUDE.md  DEPLOY.md  DEVLOG.md  PROGRESS.md  README.md  dev  nixpacks.toml  railway.json
backend/: .env.example  alembic.ini  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 0b74fcc0bd48_add_data_summarise_outputs.py  0f1c2e3a4b5d_add_include_top_stories_to_profiles.py  148a5453628c_add_data_ingestion_runs.py  1a2b3c4d5e6f_replace_max_stories_with_max_duration.py  1ec2a96a3abd_rename_bulletin_schema_to_feeds_and_add_.py  2b3c4d5e6f7a_add_segment_audio.py  3c4d5e6f7a8b_add_segment_audio_updated_at.py  3e8f9a2b1c7d_add_ranking_runs.py  492f1fd8f571_add_data_ingested_articles.py  4d5e6f7a8b9c_add_user_story_state.py  4f02ef243332_add_entities_and_article_entity_join_.py  6d6ae0382c0a_expand_data_normalisation_articles.py  91da65bf1343_add_categories_to_normalisation_articles.py  977eade90b9f_add_stories_and_story_articles.py  a1b2c3d4e5f6_add_profiles.py  a53b893ef645_add_data_normalisation_articles.py  a6b54d92b02b_introduce_domain_schemas_and_move_event_.py  a7f3c1d9e2b4_add_segment_audio_failures.py  b3c4d5e6f7a8_add_audio_url_to_bulletin_audio.py  b4c5d6e7f8a9_add_story_summaries.py  b8e4d2f6a1c3_add_pool_stamp_columns.py  c5d6e7f8a9b0_add_story_summaries_hash_confidence.py  c9a1e7b3d5f2_add_story_summary_depth_tier.py  cd73386e7f51_add_scripts_schema_and_outputs.py  d1f5a9c2e7b4_merge_pool_and_depth_heads.py  (+12 more)
backend/docker/: docker-compose.yml
backend/docs/: categorisation-llm-primary.md  editorial-pass.md
(+266 files in other folders)
