[tool.poetry]
name = "headlines-backend"
version = "0.1.0"
description = "Headlines Backend"
authors = ["Paul Broome"]
packages = [{ include = "core", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.45"
psycopg = {extras = ["binary"], version = "^3.3.2"}
alembic = "^1.18.0"
redis = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"